# mestrado-imu-reader

./: README.md
blob/main/examples/imu_reader/: main.cpp
examples/getting_started/: getting_started  main.cpp
examples/imu_reader/: CMakeLists.txt  Makefile  imu_reader  main.cpp  main_2  motionVector.cpp  motionVector.h  motionVector2.cpp  motionVector2.h
projects/: readINS_Solution.py
